# speedrun-on-linux

./: Cargo.toml  README.md  speedrun-on-linux.toml
src/: config.rs  game.rs  lib.rs  livesplit.rs  main.rs  util.rs
