[package]
name = "speedrun-on-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
dialoguer = "0.11.0"
dirs = "5.0.1"
indicatif = "0.17.8"
once_cell = "1.19.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
shellexpand = { version = "3.1.0", features = ["full"] }
sysinfo = "0.30.7"
toml = "0.8.11"
zip = "0.6.6"

[dev-dependencies]
tempfile = "3.10.1"
